--- a/templates/base.html
+++ b/templates/base.html
@@ -15,7 +15,7 @@
     <div class="collapse navbar-collapse justify-content-end">
       <ul class="navbar-nav flex-row">
         <li class="nav-item me-3"><a class="nav-link" href="#">About</a></li>
-        <li class="nav-item me-3"><a class="nav-link" href="#">Fund</a></li>
+        <li class="nav-item me-3"><a class="nav-link" href="{{ url_for('fund') }}">Fund</a></li>
         <li class="nav-item me-3"><a class="nav-link" href="#">Risk Management Services</a></li>
         <li class="nav-item"><a class="nav-link" href="{{ url_for('login') }}">Client Login</a></li>
       </ul>
