--- a/static/styles.css
+++ b/static/styles.css
@@ -132,7 +132,7 @@ footer {
 
 .chart-area {
   position: relative;
-  height: 400px;
+  height: 670px;
   margin-top: 1rem;
 }
 
@@ -258,10 +258,20 @@ footer {
   }
   
   .chart-area {
-    height: 300px;
+    height: 10px;
+    position: relative;
   }
   
+
   .metrics-grid {
     grid-template-columns: 1fr;
   }
+}
+
+.text-justify {
+    text-align: justify;
+}
+.chart-area canvas {
+  width: 100% !important;  /* fill the container */
+  height: 100% !important; /* fill the container */
 }
